<resources>
    <string name="app_name">MusicED</string>
    <string name="thuvien">THƯ VIỆN</string>
    <string name="baihat">Bài hát</string>
    <string name="canhan">Cá nhân</string>
    <string name="bangxephang">Bảng xếp hạng</string>
    <string name="chude">Chủ đề</string>
    <string name="video">Video</string>
    <string name="thongbao">Thông báo</string>
    <string name="boloc">Bộ lọc</string>
    <string name="textstart">00:00</string>
    <string name="textend">04:58</string>
</resources>
